# sonas

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  release-plz.toml  rustfmt.toml
.config/: config.toml
.github/workflows/: cd.yml  ci.yml  release.yml
macros/src/: lib.rs
nix/modules/flake/: devenvs.nix  overlays.nix  packages.nix
oprabeli/: Cargo.toml
oprabeli/src/: app.rs  ecs.rs  event.rs  lib.rs  terminal.rs
oprabeli/src/app/: controls.rs  entity_builder.rs
oprabeli/src/config/: key_chord.rs  key_config.rs  key_handler.rs  key_map.rs  key_sequence.rs  util.rs
oprabeli/src/ecs/: bevy_error_wrapper.rs  entity_commands_ext.rs  init.rs  into_result.rs  rendering.rs  signal.rs  ui_component.rs
oprabeli/src/ecs/error_handling/: error.rs  flow.rs  map_error.rs  system_runner.rs  ui_system_error.rs
oprabeli/src/ecs/event_handling/: async_queue.rs  dispatcher.rs  flow.rs  queue.rs
oprabeli/src/ecs/rendering/: components.rs  renderer.rs
oprabeli/src/ecs/ui_component/: context.rs  ui_system.rs  ui_system_collection.rs
oprabeli/src/event/: error.rs  system.rs
parser/: Cargo.toml
parser/src/: lib.rs
sonas/: Cargo.toml
sonas-macros/: Cargo.toml
sonas-macros/src/: lib.rs
sonas-parser/: Cargo.toml
sonas-parser/src/: errors.rs
sonas/.config/: config.toml
sonas/src/lib/: command.rs  server.rs
sonas/src/sonas/: app_event.rs  cli.rs  component.rs  config.rs  main.rs  util.rs
sonas/src/sonas/component/: album_card.rs  control_panel.rs  error_popup.rs  error_reporter.rs  fps.rs  library.rs  logger.rs  navbar.rs  navbar_button.rs  root.rs  scrollable.rs
sonas/src/sonas/config/: config_manager.rs  input_action.rs  keys.rs  settings.rs  theme.rs
sonas/src/sonas/tui/: app.rs  config.rs  ecs.rs  event.rs  terminal.rs
sonas/src/sonas/tui/app/: controls.rs  entity_builder.rs
sonas/src/sonas/tui/config/: config_manager.rs  key_config.rs  key_handler.rs  key_map.rs  key_sequence.rs
sonas/src/sonas/tui/config/keys/: key_chord.rs  key_config.rs
sonas/src/sonas/tui/ecs/: error_handling.rs  event_handling.rs  init.rs  rendering.rs  signal.rs  ui_component.rs
sonas/src/sonas/tui/ecs/error_handling/: error.rs  map_error.rs  system_runner.rs  ui_system_error.rs
sonas/src/sonas/tui/ecs/event_handling/: async_queue.rs  dispatcher.rs  queue.rs  system_runner.rs
sonas/src/sonas/tui/ecs/rendering/: components.rs  error.rs  renderer.rs  system_runner.rs
sonas/src/sonas/tui/ecs/ui_component/: context.rs  handle.rs  ui_system.rs  ui_system_collection.rs
sonas/src/sonas/tui/event/: error.rs  system.rs
sonas/src/sonas/util/: direction.rs
sonas/src/sonasctl/: main.rs
sonas/src/sonasd/: main.rs
src/: app.rs  components.rs  config.rs  errors.rs  logging.rs  tui.rs
src/components/: fps.rs
src/lib/: command.rs
src/zankyou/: action.rs  app.rs  config.rs  errors.rs  event.rs  tui.rs  ui.rs
src/zankyou-server/: main.rs
src/zankyou/app/: component.rs
src/zankyou/app/component/: counter.rs  root.rs
src/zankyou/components/: home.rs
src/zankyoud/: main.rs
zankyou/: Cargo.toml
zankyou-macros/: Cargo.toml
zankyou-macros/src/: lib.rs
zankyou-parser/: Cargo.toml
zankyou-parser/src/: arguments.rs  lib.rs
zankyou/src/lib/: command.rs  database.rs  mod.rs
zankyou/src/lib/commands/: mod.rs  sources.rs
zankyou/src/zankyou/: app.rs  app_event.rs  ecs.rs  event.rs  main.rs  tui.rs  ui.rs
zankyou/src/zankyou/app/: app_event.rs  component.rs
zankyou/src/zankyou/app/component/: album_card.rs  click.rs  control_panel.rs  counter.rs  library.rs  navbar.rs  navbar_button.rs  root.rs
zankyou/src/zankyou/component/: library.rs  navbar_button.rs  root.rs
zankyou/src/zankyou/config/: input_action.rs
zankyou/src/zankyou/ecs/: entity_commands_ext.rs  event_handling.rs  init.rs  rendering.rs  ui_component.rs
zankyou/src/zankyou/event/: sender.rs  task.rs
zankyou/src/zankyou/tui/: app.rs  config.rs  ecs.rs  event.rs
zankyou/src/zankyou/tui/config/: config_manager.rs  keys.rs
zankyou/src/zankyou/tui/config/keys/: action.rs  input_map.rs  key_handler.rs  key_map.rs
zankyou/src/zankyou/tui/ecs/: entity_commands_ext.rs  event_handling.rs  init.rs  rendering.rs  ui_component.rs
zankyou/src/zankyou/tui/event/: queue.rs  system.rs  task.rs
zankyou/src/zankyoud/: main.rs
