[workspace]
resolver = "3"
members = ["zankyou", "zankyou-macros", "zankyou-parser"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
repository = "https://github.com/LunaPresent/zankyou"
authors = ["Luna Present <code@lunapresent.net>", "Luna Heyman <luna.heyman@proton.me>"]
keywords = ["music", "lyrics", "synced-lyrics"]
categories = ["multimedia::audio"]

[workspace.dependencies]
thiserror = "2.0.14"
zankyou-parser.path = "./zankyou-parser"
zankyou-macros.path = "./zankyou-macros"
