[workspace]
resolver = "3"
members = ["oprabeli", "sonas", "sonas-macros", "sonas-parser"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
repository = "https://github.com/LunaPresent/sonas"
authors = ["Luna Present <code@lunapresent.net>", "Luna Heyman <luna.heyman@proton.me>"]
keywords = ["music", "lyrics", "synced-lyrics"]
categories = ["multimedia::audio"]

[workspace.dependencies]
sonas-parser.path = "./sonas-parser"
sonas-macros.path = "./sonas-macros"
