[package]
name = "sonas"
description = "A modern terminal music player written in Rust"
build = "build.rs"
default-run = "sonas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "sonas"
path = "src/sonas/main.rs"

[[bin]]
name = "sonasd"
path = "src/sonasd/main.rs"

[[bin]]
name = "sonasctl"
path = "src/sonasctl/main.rs"

[dependencies]
sonas-macros.workspace = true
sonas-parser.workspace = true
oprabeli.path = "../oprabeli"
bevy_ecs = "0.17.2"
clap = { version = "4.5.41", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.5"
config = "0.15.15"
crossterm = { version = "0.29.0", features = ["event-stream"] }
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "from"] }
directories = "6.0.0"
interprocess = { version = "2.2.3", features = ["tokio"] }
notify = "8.2.0"
ratatui = { version = "0.29.0", features = ["serde", "unstable-widget-ref"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
thiserror = "2.0.14"
serde_with = "3.14.0"

[build-dependencies]
anyhow = "1.0.98"
vergen-git2 = { version = "1.0.7", features = ["build", "cargo"] }
