[package]
name = "zankyou-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.104"
convert_case = "0.8.0"
zankyou-parser.workspace = true
